--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,33 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>IA Dashboard</title>
     <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
-    </head>
-    <body>
-        <section class="section">
-            <div class="container">
-                <div class="columns is-centered is-vcentered is-mobile">
-                    <div class="card">
-                        <div class="card-content">
-                          <p class="title is-centered" id="temperatura">
-                            0
-                          </p>
-                          <progress id="barra" class="progress is-primary" value="15" max="100"></progress>
-                          <p class="subtitle">
-                            Temperatura
-                          </p>
-                        </div>
-                      </div>
-                </div>
+  </head>
+  <body>
+    <section class="section">
+      <div class="container">
+        <div class="columns is-mobile is-centered">
+          <div class="column is-half">
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">Temperatura</p>
+                <button class="card-header-icon" aria-label="more options">
+                  <span class="icon">
+                    <i class="fas fa-angle-down" aria-hidden="true"></i>
+                  </span>
+                </button>
+              </header>
+              <div class="card-content">
+                <p class="title" id="temperatura">0</p>
+                <progress
+                  id="barra"
+                  class="progress is-primary"
+                  value="0"
+                  max="100"
+                ></progress>
+              </div>
             </div>
-        </section>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="main.js"></script>
-    </body>
+          </div>
+          <div class="column is-half">
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title is-centered">Distancia</p>
+                <button class="card-header-icon" aria-label="more options">
+                  <span class="icon">
+                    <i class="fas fa-angle-down" aria-hidden="true"></i>
+                  </span>
+                </button>
+              </header>
+              <div class="card-content">
+                <p class="title is-centered" id="distancia">0</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
