--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,54 +4,59 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>IA Dashboard</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+    tailwind.config = {
+      theme: {
+        container: {
+          center: true,
+          padding: '2rem',
+        },
+        extend: {
+          colors: {
+            backdracula: '#282a36',
+            pinkdracula: '#ff79c6',
+            purpledracula: '#bd93f9',
+            whitedracula: '#f8f8f2',
+            cyandracula: '#8be9fd',
+            greydracula: '#44475a',
+            bluedracula: '#383A59'
+          }
+        }
+      }
+    }
+  </script>
   </head>
   <body>
-    <section class="section">
-      <div class="container">
-        <div class="columns is-mobile is-centered">
-          <div class="column is-half">
-            <div class="card">
-              <header class="card-header">
-                <p class="card-header-title">Temperatura</p>
-                <button class="card-header-icon" aria-label="more options">
-                  <span class="icon">
-                    <i class="fas fa-angle-down" aria-hidden="true"></i>
-                  </span>
-                </button>
-              </header>
-              <div class="card-content">
-                <p class="title" id="temperatura">0</p>
-                <progress
-                  id="barra"
-                  class="progress is-primary"
-                  value="0"
-                  max="100"
-                ></progress>
-              </div>
-            </div>
+    <!-- Full-width fluid until the `md` breakpoint, then lock to container -->
+    <div class="w-full min-h-screen bg-backdracula p-6">
+      <h1 class="font-bold text-3xl text-center max-w-2xl mx-auto mt-12 bg-gradient-to-r from-purpledracula via-purple-500 to-pinkdracula bg-clip-text text-transparent">
+        Proyecto Final - IA Dashboard
+      </h1>
+      <!-- Card Container Start -->
+      <div class="grid grid-cols-6 gap-4">
+        <!-- Card Temperatura -->
+          <div class="bg-white col-start-2 col-end-4 p-6 rounded-lg">
+            <h2 class="text-2xl font-bold mb-2 text-gray-800">Temperatura</h2>
+            <p class="text-gray-700">Temperatura #1</p>
           </div>
-          <div class="column is-half">
-            <div class="card">
-              <header class="card-header">
-                <p class="card-header-title is-centered">Distancia</p>
-                <button class="card-header-icon" aria-label="more options">
-                  <span class="icon">
-                    <i class="fas fa-angle-down" aria-hidden="true"></i>
-                  </span>
-                </button>
-              </header>
-              <div class="card-content">
-                <p class="title is-centered" id="distancia">0</p>
-              </div>
-            </div>
+        <!-- Card 2 -->
+          <div class="bg-white col-start-4 col-end-6 p-6 rounded-lg">
+            <h2 class="text-2xl font-bold mb-2 text-gray-800">Card with no image</h2>
+            <p class="text-gray-700">This is my cool new card!</p>
+          </div>
+        <!-- Card 3 -->
+          <div class="bg-white col-start-2 col-end-4 p-6 rounded-lg ">
+            <h2 class="text-2xl font-bold mb-2 text-gray-800">Card with no image</h2>
+            <p class="text-gray-700">Card #1</p>
+          </div>
+        <!-- Card 4 -->
+          <div class="bg-white col-start-4 col-end-6 p-6 rounded-lg ">
+            <h2 class="text-2xl font-bold mb-2 text-gray-800">Card with no image</h2>
+            <p class="text-gray-700">This is my cool new card!</p>
           </div>
         </div>
-      </div>
-    </section>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="main.js"></script>
   </body>
